# Jarvis5

./: .gitignore  CMakeLists.txt  main.cpp
python/: requirements.txt  server.py
python/commands/: automation.py
python/knowledge_graph/: graph_data.json
python/logic_engine/: composition.py  executor.py  init.py
python/nlp/: init.py  intent_parser.py  lemmatizer.py  tokenizer.py  uzbek_vocab.json
src/: audioCapture.cpp  audioCapture.h  recognizer.cpp  recognizer.h
